add: add change fullname, username, bio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="edit_text_hint_enter_code">- - - - - -</string>
     <string name="fragment_settings_change_name">Имя</string>
     <string name="fragment_settings_change_surname">Фамилия</string>
+    <string name="edit_text_hint_username">Username</string>
+    <string name="edit_text_hint_bio">Bio</string>
 </resources>
